<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Naveduca</string>
    <string name="dummy_button">Info Centros</string>
    <string name="dummy_content">CENTROS\nNAVARRA</string>
    <string name="title_activity_centros">Centros</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_info_centros">InfoCentrosActivity</string>
    <string name="title_activity_info_adicional">InfoAdicionalActivity</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="barra_busqueda">Buscar por centro o localidad</string>
    <string name="nombre">Nombre del centro: </string>
    <string name="direccion">Dirección: </string>
    <string name="cp">Código postal: </string>
    <string name="localidad">Localidad: </string>
    <string name="telefono">Teléfono: </string>
    <string name="fax">Fax: </string>
    <string name="email">E-mail: </string>
    <string name="web">Web: </string>
    <string name="naturaleza">Naturaleza: </string>
    <string name="info_basica">Información básica</string>
    <string name="info_adicional">Plan de estudios \ny otros datos</string>
    <string name="localizacion">Mapa de localización</string>
    <string name="modelo">Modelos y programas lingüísticos:</string>
    <string name="tipo">Tipo de enseñanza:</string>
    <string name="programas">Programas:</string>
    <string name="objetivos">Objetivos educativos:</string>
    <string name="sitna">Enlace Sitna:</string>
    <string name="zona">Zona lingüística:</string>
    <string name="matriculas">Número de matrículas:</string>
    <string name="servicios">Servicios complementarios:</string>
    <string name="atencion">Atención NEE:</string>
    <string name="plan">Plan de estudios:</string>
    <string name="nodisponible">No disponible</string>
    <string name="tanos">Plazas 3 años:</string>
    <string name="valores">Valores del centro:</string>
    <string name="distinciones">Distinciones:</string>
    <string name="jornada">Jornada escolar:</string>
    <string name="proyectos">Proyectos:</string>
    <string name="reconocimientos">Reconocimientos:</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipalActivity</string>
    <string name="listadoCentros">Listado de centros</string>
    <string name="busquedaDetallada">Búsqueda por parámetros de centros</string>
    <string name="idioma">Idioma</string>
    <string name="actividad">Buscador</string>
    <string name="title_activity_busqueda_avanzada">Búsqueda Avanzada de Centros</string>

    <string-array name="naturaleza">
        <item></item>
        <item>Público</item>
        <item>Privado</item>
        <item>Concertado</item>
    </string-array>

    <string name="curso">Curso:</string>

    <string-array name="curso">
        <item></item>
        <item>2015 2016</item>
        <item>2014 2015</item>
    </string-array>
    <string-array name="modelo">
        <item></item>
        <item>Modelo G (enseñanza en castellano)</item>
        <item>Modelo G con Programa PAI (inmersión en inglés)</item>
        <item>Modelo G - Centro British</item>
        <item> Modelo G con Sección Bilingüe</item>
        <item>Modelo G con Programa Bachibac</item>
        <item>Modelo D (enseñanza en euskera con castellano como asignatura)</item>
        <item>Modelo D con Programa PAI (inmersión en inglés)</item>
        <item>Modelo D con Sección Bilingüe</item>
        <item>Modelo D con Programa Bachibac</item>
        <item>Modelo B (enseñanza en euskera con castellano como asignatura y en una materia)</item>
        <item>Modelo A (enseñanza en castellano con euskera como asignatura)</item>
        <item>Modelo A con Programa PAI (inmersión en inglés)</item>
        <item>Modelo A - Centro British</item>
        <item>Modelo A con Sección Bilingüe</item>
        <item>Modelo A con Programa Bachibac </item>
    </string-array>
    <string-array name="servicios">
        <item></item>
        <item>Comedor</item>
        <item>Transporte</item>
        <item>Extraescolares</item>
    </string-array>

    <string name="nivel">Nivel educativo:</string>

    <string-array name="nivel">
        <item></item>
        <item>Pruebas de acceso</item>
        <item>Euskarabidea</item>
        <item>Primer Ciclo de Educación Infantil (0 3 años)</item>
        <item>Educación Infantil y Primaria (3 12 años)</item>
        <item>Educación Secundaria Obligatoria</item>
        <item>Bachillerato</item>
        <item>Formación Profesional - Grado Medio</item>
        <item>Formación Profesional - Grado Superior</item>
        <item>Programas de Cualificación Profesional Inicial</item>
        <item>Educación Especial</item>
        <item>Música</item>
        <item>Danza</item>
        <item>Escuela de Arte</item>
        <item>Idiomas</item>
        <item>Formación Personas Adultas</item>
        <item>Unidades de Competencia</item>
    </string-array>

    <string name="buscar">Buscar</string>
    <string name="title_activity_idioma">IdiomaActivity</string>
    <string name="title_activity_camino">CaminoActivity</string>
    <string name="destino">Selecciona el centro de destino</string>
    <string name="activitycamino">Camino al centro solicitado: ruta roja para vehículos, verde para caminantes</string>
    <string name="ok">Aceptar</string>
    <string name="dialog_message">No hay conexión a internet</string>
    <string name="dialog_title">Error conexión a internet</string>
    <string name="dialog_message2">Llamada telefónica</string>
    <string name="dialog_title2">¿Estás seguro de que quieres llamar al Centro Educativo?</string>
    <string name="select">Selecciona un idioma</string>
    <string name="empty"></string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_busqueda_mapa">Buscador Modo Mapa</string>
    <string name="modo_lista">Lista</string>
    <string name="modo_mapa">Mapa</string>

</resources>
