<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|fill_vertical"
    android:clipToPadding="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
>

        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curso"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />
    
    <nav.naveduca.MultiSpinner
        android:id="@+id/multispinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="7dp"
        android:entries="@array/curso"
       />
    
            <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naturaleza"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/multispinner1"
        android:layout_marginTop="7dp" />
    
    <nav.naveduca.MultiSpinner
    android:id="@+id/multispinner2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/naturaleza"
    android:layout_below="@+id/textView2"
    android:layout_marginTop="7dp" />
    
                <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modelo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/multispinner2"
        android:layout_marginTop="7dp" />
    
    <nav.naveduca.MultiSpinner
    android:id="@+id/multispinner3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/modelo"
    android:layout_below="@+id/textView3"
    android:layout_marginTop="7dp" />
    
                    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicios"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/multispinner3"
        android:layout_marginTop="7dp" />
    
    <nav.naveduca.MultiSpinner
    android:id="@+id/multispinner4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/servicios"
    android:layout_below="@+id/textView4"
    android:layout_marginTop="7dp" />
    
                        <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/multispinner4"
        android:layout_marginTop="7dp" />
    
    <nav.naveduca.MultiSpinner
    android:id="@+id/multispinner5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/nivel"
    android:layout_below="@+id/textView5"
    android:layout_marginTop="7dp" />
    
        <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/multispinner5"
        android:layout_marginTop="7dp"
        android:text="@string/buscar"
         />
    
     </RelativeLayout>
     </ScrollView>


